# XLSRap

./: .gitignore  CMakeLists.txt  DEPS  README.md
src/: CMakeLists.txt
src/ui/: CMakeLists.txt  ControlsWidget.cpp  ControlsWidget.h  Main.cpp  VideoWidget.cpp  VideoWidget.h  XLSItem.cpp  XLSItem.h  XLSModel.cpp  XLSModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/xlsrap/: CMakeLists.txt  XLSRap.cpp
src/xlsrap/include/xlsrap/: Config.hpp  XLSRap.hpp
